# llm-test

./: .gitignore  Dockerfile  README.md  docker-compose.yml  manage.py  pyproject.toml  pytest.ini
.github/workflows/: codeql-analysis.yml
covid_trends/: asgi.py  settings.py  urls.py  wsgi.py
data_pipeline/: admin.py  models.py
data_pipeline/management/commands/: fetch_data.py  summarise.py  summarize.py  synthesize.py  validate.py
data_pipeline/management/commands/tests/: test_fetch_data.py  test_summarise.py  test_synthesize.py  test_validate.py
data_pipeline/migrations/: 0001_initial.py  0002_alter_summary_options.py  0003_alter_validation_hallucination_score.py
data_pipeline/services/: enums.py  pubmed_client.py
data_pipeline/services/fact_checker/: agent.py
data_pipeline/services/llm_orchestrator/: agent.py
