[tool.poetry]
name = "covid_trends"
version = "0.1.0"
description = "Django app for LLM-Orchestrated Hallucination Stress Test & Trend Report"
authors = ["David <david.felce@elixirsoftware.co.uk>"]

# Use Python 3.12
[tool.poetry.dependencies]
python = "^3.12"
django = "^5.2"
psycopg2-binary = "^2.9"
langchain = "^0.3.27"
openai = "^0.27.0"
django-environ = "^0.10.0"
requests = "^2.31"
pydantic = "^2.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0"
pytest-django = "^4.5"
flake8 = "^6.0"
mypy = "^1.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
manage = "django.core.management:execute_from_command_line"
